# services/auth-service/src/auth/dto/register-email.dto.ts
@@ -1,9 +1,20 @@
 import { ApiProperty, ApiPropertyOptional } from '@nestjs/swagger';
-import { IsEmail, IsEnum, IsOptional, IsString, MinLength } from 'class-validator';
+import {
+  IsEmail,
+  IsEnum,
+  IsOptional,
+  IsString,
+  MinLength,
+} from 'class-validator';
 import { UserRole } from '@prisma-app/client';
 
-export class RegisterDto {
-  @ApiProperty({ example: 'customer@example.com' })
+export class RegisterEmailDto {
+  @ApiProperty({ example: 'John' })
+  @IsString()
+  @MinLength(2)
+  name: string;
+
+  @ApiProperty({ example: 'john@example.com' })
   @IsEmail()
   email: string;
 
